Colors are updated

--- a/_app/_posts/2023-05-13-test-post.md
+++ b/_app/_posts/2023-05-13-test-post.md
@@ -38,3 +38,13 @@ Commodo odio aenean sed adipiscing diam. Sed enim ut sem viverra aliquet eget si
 - List Item 1
 - List Item 2
 - List Item 3
+
+Commodo odio aenean sed adipiscing `diam`. Sed enim ut sem viverra aliquet eget sit. Porta non pulvinar neque laoreet suspendisse interdum. Sapien et ligula ullamcorper malesuada.
+
+---
+
+`Suspendisse interdum` consectetur libero id faucibus nisl tincidunt. Tortor condimentum lacinia quis vel eros donec ac odio tempor.
+
+1. Apple
+2. Baby
+3. Car
