Styles are updated

--- a/_app/_posts/2023-05-13-test-post.md
+++ b/_app/_posts/2023-05-13-test-post.md
@@ -17,12 +17,28 @@ Id neque aliquam vestibulum morbi. Arcu vitae elementum curabitur vitae nunc sed
 Cras adipiscing enim eu turpis egestas pretium aenean pharetra magna. Dui accumsan sit amet nulla facilisi morbi tempus. Justo eget magna fermentum iaculis eu non. A erat nam at lectus urna duis convallis. Fusce id velit ut tortor pretium viverra suspendisse. Ipsum dolor sit amet consectetur adipiscing elit. Ultrices mi tempus imperdiet nulla malesuada pellentesque.
 
 ```ruby
-def some_method(some_argument)
-  some_argument ||= "some value"
+module Foo
+  class Bar
+    def self.some_method(some_argument)
+      some_argument ||= "some value"
+      some_value ||= 3_000_000
 
-  # Some comment
-  puts some_argument
+      # Some comment
+      puts some_argument
+
+      raise Error, "foo"
+
+      date = new Date("01-01-2022")
+    end
+  end
 end
+```
+
+```json
+{
+  "valid": "json",
+  INVALIDJSON
+}
 ```
 
 ### Baz
