--- a/_app/_posts/2023-05-13-test-post.md
+++ b/_app/_posts/2023-05-13-test-post.md
@@ -4,7 +4,7 @@ title:  "Test post"
 date: 2023-02-13
 ---
 
-![Some alt text](https://placekitten.com/750/425)
+![Some alt text](https://placehold.co/720x360)
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus proin nibh nisl condimentum. Morbi tristique senectus et netus et [malesuada](https://www.google.com) fames. Risus feugiat in ante metus dictum at tempor commodo. Metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Magna fringilla [urna porttitor rhoncus](#) dolor purus. Sit amet porttitor eget dolor morbi non arcu. Aliquam ut porttitor leo a diam sollicitudin tempor.
 
