Multi word tags are supported

--- a/_app/_posts/2023-05-13-test-post.md
+++ b/_app/_posts/2023-05-13-test-post.md
@@ -1,7 +1,10 @@
 ---
 title:  "Test post"
 date: 2023-02-13
-tags: foo bar
+tags:
+- foo
+- bar
+- some tag
 ---
 
 ![Some alt text](https://placehold.co/800x350)
